<resources>
    <string name="app_name">sMusic</string>
    <string name="copy_right">Copyright © 2018 Scott Inc. All Rights Reserved.</string>
    <string name="db_name">dbSMusic</string>

    <string name="transition_name_cover">transition_name_cover</string>
    <string name="transition_name_fab">transition_name_fab</string>


    <string name="author_name">su</string>
    <string name="author_email">scottsu163425@gmail.com</string>
    <string name="author_place">福州·中国</string>
    <string name="author_home_page_url">https://github.com/ScottSu163425</string>
    <string name="app_home_page_url">https://github.com/ScottSu163425/sMusic2</string>


    <string name="action_search">搜索</string>
    <string name="action_more">更多</string>
    <string name="action_collect">加入收藏夹</string>
    <string name="action_remove_from_collect">从收藏夹中移除</string>
    <string name="action_clear_collect">清空收藏夹</string>
    <string name="action_delete_collect">删除收藏夹</string>
    <string name="action_check_album">查看专辑</string>
    <string name="action_check_song_info">查看歌曲信息</string>


    <string name="song">歌曲</string>
    <string name="collection">收藏</string>
    <string name="album">专辑</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="tip_exit">退出应用?</string>
    <string name="song_name">歌曲名</string>
    <string name="artist">艺术家</string>
    <string name="song_duration">时长</string>
    <string name="file_size">文件大小</string>
    <string name="file_path">文件路径</string>
    <string name="test_user_name">Su</string>
    <string name="test_user_location">福州·中国</string>
    <string name="test_user_description">\"Love what you do.\"</string>
    <string name="menu_item_statistic">播放统计</string>
    <string name="about">关于</string>
    <string name="night_mode">夜间模式</string>
    <string name="language">语言</string>
    <string name="hint_collection_name">收藏夹名称</string>
    <string name="success_create_new_collection">收藏夹创建成功</string>
    <string name="tip_input_collection_name">请输入要创建收藏夹的名称</string>
    <string name="error_collection_name_exist">收藏夹名称已存在</string>
    <string name="delete_collection">删除收藏夹</string>
    <string name="ask_remove_collection">是否移除收藏夹？</string>
    <string name="select_collection">选择收藏夹</string>
    <string name="error_already_exist_in_collection">收藏夹中已存在</string>
    <string name="success_add_into_collection">成功添加到收藏夹</string>
    <string name="error_empty_collection_to_add">你还没有创建任何收藏夹</string>
    <string name="empty_collections">没有任何收藏夹</string>
    <string name="ask_clear_collection_songs">清空收藏夹内的所有歌曲?</string>
    <string name="ask_delete_collection">删除这个收藏夹?</string>
    <string name="empty_collection_song">收藏夹内是空的</string>
    <string name="author">作者</string>
    <string name="homePage">主页</string>
    <string name="version">版本</string>
    <string name="app_home_page">项目主页</string>
    <string name="license">许可信息</string>
    <string name="hint_search">歌曲/收藏夹/专辑/艺术家</string>
    <string name="error_empty_search">请输入一个搜索关键字</string>

</resources>
