<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="left"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="left|bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <android.support.percent.PercentFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_header_about"
                        app:layout_aspectRatio="156%"
                        app:layout_widthPercent="100%"/>

                </android.support.percent.PercentFrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:minHeight="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_overlapTop="@dimen/height_header_overlap_main"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_s"
                    android:layout_marginRight="@dimen/padding_s"
                    android:layout_marginTop="@dimen/padding_xs">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundContent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="@dimen/padding_s">

                            <ImageView
                                android:layout_width="@dimen/height_item_s"
                                android:layout_height="@dimen/height_item_s"
                                android:src="@mipmap/ic_launcher"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/app_name"
                                android:textColor="@color/textPrimary"
                                android:textSize="@dimen/text_size_title"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_extension_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/version"
                                android:textColor="@color/textPrimary"/>

                            <TextView
                                android:id="@+id/tv_version_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_xs"
                                android:textColor="@color/textSecondary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/view_app_home_page"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_open_in_browser_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/app_home_page"
                                android:textColor="@color/textPrimary"/>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_s"
                    android:layout_marginRight="@dimen/padding_s"
                    android:layout_marginTop="@dimen/padding_s">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundContent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding_s"
                            android:text="@string/author"
                            android:textColor="@color/textSecondary"
                            android:textSize="@dimen/text_size_caption"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_person_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/author_name"
                                android:textColor="@color/textPrimary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_place_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/author_place"
                                android:textColor="@color/textPrimary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_email_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/author_email"
                                android:textColor="@color/textPrimary"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/view_author_home_page"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_item_s"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/padding_s">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_home_black"
                                android:tint="@color/iconTintGray"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding_s"
                                android:text="@string/homePage"
                                android:textColor="@color/textPrimary"/>
                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/padding_m"/>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

</layout>
